style.css
/* Document settings */
body {
  background-color: #dadada;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
.wrapper {
  flex: 1;
}
html {
  background-color: inherit;
}
/* Vibe Cannon Image Logo Settings */
.logo {
  text-align: center;
  max-height: 250px;
}
#cannon-img {
  max-height: 300px;
}
/* Titles for the three columns */
#title {
  text-align: center;
  font-size: xx-large;
  font-weight: 900;
  margin: 20px;
}
.columns {
  background-color: inherit;
  text-align: center;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
}
.is-mobile {
  width: 90%;
}
#search-area {
  border: 1px solid;
  border-radius: 10px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}
.search {
  width: 90%;
  margin: 10px;
}
#itunes-area{
  text-align: initial !important;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}
#track-info{
  text-align: initial !important;
}
#track-info p:nth-child(1)
{
  font-size: 23px;
}
.previewLinks{
  color: #fa233b;
}
#album-art{
  margin-top: 5px;
}
.button {
  margin-left: 5px;
}
#useVimeo {
  margin-top: 10px;
  font-weight: 900;
  margin-right: 5px;
}
#results {
  border: 1px solid;
  border-radius: 10px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}
#lyrics {
  border: 1px solid;
  border-radius: 10px;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}
/* Styles for footer with dark/light theme*/
.footer {
  background-color: rgba(90, 85, 85, 0.828) ;
  color: black;
  text-align: center;
  padding: 10px;
  width: 100%;
}
.footer-d {
  background-color: #272626;
  color: white;
  text-align: center;
  padding: 10px;
  width: 100%;
}
/* Dark theme and Light theme color settings */
.dark {
  background-color: #202020;
  color: white;
  height: 100vh;
}
.light {
  background-color: #dadada;
  color: black;
  height: 100vh;
}
/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #b8b8b8;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}
/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}
/* Styling the Switch button */
.switch {
  position: absolute;
  display: inline-block;
  width: 60px;
  height: 34px;
  margin: 1%;
}
/* Rounded sliders */
.slider.round {
  border-radius: 34px;
  color: white;
  text-align: center;
  font-size: 21px;
  font-weight: 400;
  user-select: none;
  text-indent: -5px;
}
.slider.round:before {
  border-radius: 50%;
}
input:checked + .slider {
  background-color: black;
}
input:focus + .slider {
  box-shadow: 0 0 1px black;
}
input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Lyrics Styling*/
#lyricsPlacement {
  overflow: auto;
  max-height: 1025px;
 }

 .errorModal{
   margin: auto;
   margin-bottom: 25px;
   max-width: 25%;
   text-align: center;
   font-size: 25px;
 }

 .make-inline{
   display: inline;
 }

  @media (max-width: 575.98px) { 
  iframe {
    width: 320px;
    height: 315px;
  }
 }

 

 

